Closed Bug 334305 Opened 18 years ago Closed 17 years ago

Importing bookmarks from Opera does not work

Categories

(Firefox :: Migration, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED
Firefox 3 alpha8

People

(Reporter: Gavin, Assigned: moco)

References

Details

Attachments

(1 file)

Steps to reproduce:
1) Using Opera 8.54, add a couple of bookmarks
2) In Firefox, using either File->Import, or Organize Bookmarks->File->Import, try to import bookmarks from Opera

Actual results:
Success reported, but no bookmarks appear in the bookmarks menu or bookmarks toolbar
Flags: blocking-firefox2?
Tested:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060416 Firefox/3.0a1
Have you looked in the sidebar of the bookmarks manager to find a "Imported from [app]" folder?
---
Please include your useragent in a comment.
(In reply to comment #2)
> Have you looked in the sidebar of the bookmarks manager to find a "Imported
> from [app]" folder?

Yes. When I said "does not work", I meant "does not work" :).

> Please include your useragent in a comment.

I included the UA string in comment 2. Please read bugs before commenting on them.

This bug only affects Places enabled builds.
Flags: blocking-firefox2?
Version: 2.0 Branch → Trunk
Just to update this bug...

When I try to import settings from Opera 9.02 into Minefield 3.0a7pre (2007070604), only Opera's default bookmarks are carried over.  My browsing history, user saved bookmarks, and saved passwords are not imported.

I ran across this today during the test day.

Cheers.
zoinks, I see the problem.  parentFolder is uninitialized, http://lxr.mozilla.org/seamonkey/source/browser/components/migration/src/nsOperaProfileMigrator.cpp#1055

simple fix in hand, will wait for dietrich to land his changes first.
Assignee: nobody → sspitzer
Target Milestone: --- → Firefox 3 M8
anthony:  can you log a spin off bug about the issues you are seeing in comment #4?
Status: NEW → ASSIGNED
Depends on: 386678
Flags: in-litmus?
Flags: blocking-firefox3?
Attached patch fixes importSplinter Review
Attachment #278906 - Flags: review?(dietrich)
Attachment #278906 - Flags: review?(dietrich) → review+
fixed.

Checking in src/nsOperaProfileMigrator.cpp;
/cvsroot/mozilla/browser/components/migration/src/nsOperaProfileMigrator.cpp,v
<--  nsOperaProfileMigrator.cpp
new revision: 1.71; previous revision: 1.70
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
anthony wrote:

> When I try to import settings from Opera 9.02 into Minefield 3.0a7pre
> (2007070604), only Opera's default bookmarks are carried over.  My browsing
> history, user saved bookmarks, and saved passwords are not imported.

I just tried both first run migration and import and my bookmarks and history got migrated, as did cookies, but passwords did not.

I'm using Opera 9.23

looking at our code, we don't support opera password migration yet, and that is not an option in the manual import UI.

I've logged a new bug on that, see bug #394273
I verify that this bug is fixed.  One thing I noticed when doing my verification testing...

When importing Opera settings using the Migration Wizard, the bookmarks were placed in the root bookmarks folder (the same as they would if I had added them in firefox).

When importing Opera settings using the Import Wizard, the bookmarks were placed in an "From Opera" folder within Bookmarks.
Status: RESOLVED → VERIFIED
anthony, thanks for verifying.

what you observed in comment #10 (that first run migration is different than import) is by design.

We do the same thing from IE, and all browser should do that.
Flags: blocking-firefox3? → blocking-firefox3+
I will handle adding the Litmus test case for this one.
https://litmus.mozilla.org/show_test.cgi?id=1647 was updated to cover importing Opera data. There is already an existing test case for migration.
Flags: in-litmus? → in-litmus+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: