fix for bug #334305:  Importing bookmarks from Opera does not work r=dietrich